--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 07 Jan 2025 02:49:46 PM UTC
+%% Wed 08 Jan 2025 02:11:31 PM UTC
 \tikzset{every node/.append style={scale=1.00}}
 \path (0.000,0.000) rectangle (14.000,18.000);
 \gpcolor{color=gp lt color border}
@@ -9,469 +9,350 @@
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.691)--(11.115,10.691);
+\draw[gp path] (1.400,9.000)--(12.599,9.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.691)--(2.604,10.691);
-\node[gp node right] at (2.240,10.691) {$1.25\times10^{11}$};
+\draw[gp path] (1.400,9.000)--(1.580,9.000);
+\node[gp node right] at (1.216,9.308) {$2.2385\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.435)--(11.115,11.435);
+\draw[gp path] (1.400,9.900)--(12.599,9.900);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.435)--(2.604,11.435);
-\node[gp node right] at (2.240,11.435) {$1.3\times10^{11}$};
+\draw[gp path] (1.400,9.900)--(1.580,9.900);
+\node[gp node right] at (1.216,10.208) {$2.239\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,12.178)--(11.115,12.178);
+\draw[gp path] (1.400,10.800)--(12.599,10.800);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,12.178)--(2.604,12.178);
-\node[gp node right] at (2.240,12.178) {$1.35\times10^{11}$};
+\draw[gp path] (1.400,10.800)--(1.580,10.800);
+\node[gp node right] at (1.216,11.108) {$2.2395\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,12.922)--(11.115,12.922);
+\draw[gp path] (1.400,11.700)--(12.599,11.700);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,12.922)--(2.604,12.922);
-\node[gp node right] at (2.240,12.922) {$1.4\times10^{11}$};
+\draw[gp path] (1.400,11.700)--(1.580,11.700);
+\node[gp node right] at (1.216,12.008) {$2.24\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,13.665)--(11.115,13.665);
+\draw[gp path] (1.400,12.600)--(12.599,12.600);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,13.665)--(2.604,13.665);
-\node[gp node right] at (2.240,13.665) {$1.45\times10^{11}$};
+\draw[gp path] (1.400,12.600)--(1.580,12.600);
+\node[gp node right] at (1.216,12.908) {$2.2405\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,14.409)--(11.115,14.409);
+\draw[gp path] (1.400,13.499)--(12.599,13.499);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,14.409)--(2.604,14.409);
-\node[gp node right] at (2.240,14.409) {$1.5\times10^{11}$};
+\draw[gp path] (1.400,13.499)--(1.580,13.499);
+\node[gp node right] at (1.216,13.807) {$2.241\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,15.152)--(11.115,15.152);
+\draw[gp path] (1.400,14.399)--(12.599,14.399);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,15.152)--(2.604,15.152);
-\node[gp node right] at (2.240,15.152) {$1.55\times10^{11}$};
+\draw[gp path] (1.400,14.399)--(1.580,14.399);
+\node[gp node right] at (1.216,14.707) {$2.2415\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,15.896)--(4.679,15.896);
-\draw[gp path] (10.931,15.896)--(11.115,15.896);
+\draw[gp path] (1.400,15.299)--(12.599,15.299);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,15.896)--(2.604,15.896);
-\node[gp node right] at (2.240,15.896) {$1.6\times10^{11}$};
+\draw[gp path] (1.400,15.299)--(1.580,15.299);
+\node[gp node right] at (1.216,15.607) {$2.242\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,16.639)--(4.679,16.639);
-\draw[gp path] (10.931,16.639)--(11.115,16.639);
+\draw[gp path] (1.400,16.199)--(6.163,16.199);
+\draw[gp path] (12.415,16.199)--(12.599,16.199);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,16.639)--(2.604,16.639);
-\node[gp node right] at (2.240,16.639) {$1.65\times10^{11}$};
+\draw[gp path] (1.400,16.199)--(1.580,16.199);
+\node[gp node right] at (1.216,16.507) {$2.2425\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,17.383)--(11.115,17.383);
+\draw[gp path] (1.400,17.099)--(12.599,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,17.383)--(2.604,17.383);
-\node[gp node right] at (2.240,17.383) {$1.7\times10^{11}$};
+\draw[gp path] (1.400,17.099)--(1.580,17.099);
+\node[gp node right] at (1.216,17.407) {$2.243\times10^{13}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.691)--(2.424,17.383);
+\draw[gp path] (1.400,9.000)--(1.400,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.691)--(2.424,10.871);
-\draw[gp path] (2.424,17.383)--(2.424,17.203);
-\node[gp node left,rotate=270] at (2.424,10.507) {$0$};
+\draw[gp path] (1.400,9.000)--(1.400,9.180);
+\draw[gp path] (1.400,17.099)--(1.400,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (3.666,10.691)--(3.666,17.383);
+\draw[gp path] (3.000,9.000)--(3.000,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.666,10.691)--(3.666,10.871);
-\draw[gp path] (3.666,17.383)--(3.666,17.203);
-\node[gp node left,rotate=270] at (3.666,10.507) {$50$};
+\draw[gp path] (3.000,9.000)--(3.000,9.180);
+\draw[gp path] (3.000,17.099)--(3.000,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.907,10.691)--(4.907,15.663);
-\draw[gp path] (4.907,17.203)--(4.907,17.383);
+\draw[gp path] (4.600,9.000)--(4.600,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.907,10.691)--(4.907,10.871);
-\draw[gp path] (4.907,17.383)--(4.907,17.203);
-\node[gp node left,rotate=270] at (4.907,10.507) {$100$};
+\draw[gp path] (4.600,9.000)--(4.600,9.180);
+\draw[gp path] (4.600,17.099)--(4.600,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.149,10.691)--(6.149,15.663);
-\draw[gp path] (6.149,17.203)--(6.149,17.383);
+\draw[gp path] (6.200,9.000)--(6.200,15.379);
+\draw[gp path] (6.200,16.919)--(6.200,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.149,10.691)--(6.149,10.871);
-\draw[gp path] (6.149,17.383)--(6.149,17.203);
-\node[gp node left,rotate=270] at (6.149,10.507) {$150$};
+\draw[gp path] (6.200,9.000)--(6.200,9.180);
+\draw[gp path] (6.200,17.099)--(6.200,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.390,10.691)--(7.390,15.663);
-\draw[gp path] (7.390,17.203)--(7.390,17.383);
+\draw[gp path] (7.799,9.000)--(7.799,15.379);
+\draw[gp path] (7.799,16.919)--(7.799,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.390,10.691)--(7.390,10.871);
-\draw[gp path] (7.390,17.383)--(7.390,17.203);
-\node[gp node left,rotate=270] at (7.390,10.507) {$200$};
+\draw[gp path] (7.799,9.000)--(7.799,9.180);
+\draw[gp path] (7.799,17.099)--(7.799,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.632,10.691)--(8.632,15.663);
-\draw[gp path] (8.632,17.203)--(8.632,17.383);
+\draw[gp path] (9.399,9.000)--(9.399,15.379);
+\draw[gp path] (9.399,16.919)--(9.399,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.632,10.691)--(8.632,10.871);
-\draw[gp path] (8.632,17.383)--(8.632,17.203);
-\node[gp node left,rotate=270] at (8.632,10.507) {$250$};
+\draw[gp path] (9.399,9.000)--(9.399,9.180);
+\draw[gp path] (9.399,17.099)--(9.399,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.873,10.691)--(9.873,15.663);
-\draw[gp path] (9.873,17.203)--(9.873,17.383);
+\draw[gp path] (10.999,9.000)--(10.999,15.379);
+\draw[gp path] (10.999,16.919)--(10.999,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.873,10.691)--(9.873,10.871);
-\draw[gp path] (9.873,17.383)--(9.873,17.203);
-\node[gp node left,rotate=270] at (9.873,10.507) {$300$};
+\draw[gp path] (10.999,9.000)--(10.999,9.180);
+\draw[gp path] (10.999,17.099)--(10.999,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (11.115,10.691)--(11.115,17.383);
+\draw[gp path] (12.599,9.000)--(12.599,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.115,10.691)--(11.115,10.871);
-\draw[gp path] (11.115,17.383)--(11.115,17.203);
-\node[gp node left,rotate=270] at (11.115,10.507) {$350$};
-\draw[gp path] (11.115,10.691)--(10.935,10.691);
-\node[gp node left] at (11.299,10.691) {$8.5\times10^{10}$};
-\draw[gp path] (11.115,11.360)--(10.935,11.360);
-\node[gp node left] at (11.299,11.360) {$9\times10^{10}$};
-\draw[gp path] (11.115,12.029)--(10.935,12.029);
-\node[gp node left] at (11.299,12.029) {$9.5\times10^{10}$};
-\draw[gp path] (11.115,12.699)--(10.935,12.699);
-\node[gp node left] at (11.299,12.699) {$1\times10^{11}$};
-\draw[gp path] (11.115,13.368)--(10.935,13.368);
-\node[gp node left] at (11.299,13.368) {$1.05\times10^{11}$};
-\draw[gp path] (11.115,14.037)--(10.935,14.037);
-\node[gp node left] at (11.299,14.037) {$1.1\times10^{11}$};
-\draw[gp path] (11.115,14.706)--(10.935,14.706);
-\node[gp node left] at (11.299,14.706) {$1.15\times10^{11}$};
-\draw[gp path] (11.115,15.375)--(10.935,15.375);
-\node[gp node left] at (11.299,15.375) {$1.2\times10^{11}$};
-\draw[gp path] (11.115,16.045)--(10.935,16.045);
-\node[gp node left] at (11.299,16.045) {$1.25\times10^{11}$};
-\draw[gp path] (11.115,16.714)--(10.935,16.714);
-\node[gp node left] at (11.299,16.714) {$1.3\times10^{11}$};
-\draw[gp path] (11.115,17.383)--(10.935,17.383);
-\node[gp node left] at (11.299,17.383) {$1.35\times10^{11}$};
-\draw[gp path] (2.424,17.383)--(2.424,10.691)--(11.115,10.691)--(11.115,17.383)--cycle;
-\draw[gp path] (4.679,15.663)--(4.679,17.203)--(10.931,17.203)--(10.931,15.663)--cycle;
-\node[gp node right] at (9.647,16.818) {Strategic Objective Value};
+\draw[gp path] (12.599,9.000)--(12.599,9.180);
+\draw[gp path] (12.599,17.099)--(12.599,16.919);
+\draw[gp path] (12.599,9.000)--(12.419,9.000);
+\node[gp node left] at (12.783,9.308) {$2.2315\times10^{13}$};
+\draw[gp path] (12.599,10.012)--(12.419,10.012);
+\node[gp node left] at (12.783,10.320) {$2.232\times10^{13}$};
+\draw[gp path] (12.599,11.025)--(12.419,11.025);
+\node[gp node left] at (12.783,11.333) {$2.2325\times10^{13}$};
+\draw[gp path] (12.599,12.037)--(12.419,12.037);
+\node[gp node left] at (12.783,12.345) {$2.233\times10^{13}$};
+\draw[gp path] (12.599,13.050)--(12.419,13.050);
+\node[gp node left] at (12.783,13.358) {$2.2335\times10^{13}$};
+\draw[gp path] (12.599,14.062)--(12.419,14.062);
+\node[gp node left] at (12.783,14.370) {$2.234\times10^{13}$};
+\draw[gp path] (12.599,15.074)--(12.419,15.074);
+\node[gp node left] at (12.783,15.382) {$2.2345\times10^{13}$};
+\draw[gp path] (12.599,16.087)--(12.419,16.087);
+\node[gp node left] at (12.783,16.395) {$2.235\times10^{13}$};
+\draw[gp path] (12.599,17.099)--(12.419,17.099);
+\node[gp node left] at (12.783,17.407) {$2.2355\times10^{13}$};
+\draw[gp path] (1.400,17.099)--(1.400,9.000)--(12.599,9.000)--(12.599,17.099)--cycle;
+\draw[gp path] (6.163,15.379)--(6.163,16.919)--(12.415,16.919)--(12.415,15.379)--cycle;
+\node[gp node right] at (11.131,16.534) {Strategic Objective Value};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
-\draw[gp path] (9.831,16.818)--(10.747,16.818);
-\draw[gp path] (2.424,11.458)--(2.449,11.431)--(2.449,11.416)--(2.449,11.407)--(2.449,11.396)%
-  --(2.449,11.387)--(2.449,11.368)--(2.449,11.361)--(2.474,11.360)--(2.474,11.339)--(2.474,11.334)%
-  --(2.474,11.329)--(2.498,11.324)--(2.498,11.321)--(2.498,11.314)--(2.523,11.306)--(2.523,11.304)%
-  --(2.523,11.302)--(2.548,11.295)--(2.548,11.286)--(2.573,11.285)--(2.573,11.278)--(2.573,11.269)%
-  --(2.598,11.250)--(2.598,11.235)--(2.623,11.232)--(2.623,11.224)--(2.647,11.212)--(2.647,11.209)%
-  --(2.672,11.207)--(2.672,11.206)--(2.672,11.204)--(2.697,11.194)--(2.697,11.188)--(2.747,11.183)%
-  --(2.772,11.181)--(2.772,11.176)--(2.772,11.174)--(2.796,11.172)--(2.796,11.171)--(2.796,11.168)%
-  --(2.796,11.165)--(2.821,11.157)--(2.821,11.155)--(2.846,11.149)--(2.871,11.149)--(2.871,11.141)%
-  --(2.896,11.140)--(2.921,11.132)--(2.921,11.130)--(2.921,11.122)--(2.945,11.119)--(2.970,11.116)%
-  --(2.970,11.113)--(2.995,11.110)--(3.070,11.109)--(3.070,11.108)--(3.094,11.107)--(3.094,11.105)%
-  --(3.119,11.103)--(3.144,11.102)--(3.169,11.101)--(3.194,11.098)--(3.194,11.093)--(3.343,11.091)%
-  --(3.343,11.090)--(3.368,11.090)--(3.417,11.088)--(3.467,11.087)--(3.492,11.086)--(3.517,11.081)%
-  --(3.517,11.078)--(3.517,11.073)--(3.541,11.071)--(3.541,11.070)--(3.566,11.069)--(3.591,11.068)%
-  --(3.591,11.063)--(3.641,11.062)--(3.666,11.062)--(3.666,11.060)--(3.715,11.060)--(3.740,11.060)%
-  --(3.790,11.059)--(3.815,11.059)--(3.864,11.057)--(3.914,11.057)--(3.914,11.055)--(3.939,11.055)%
-  --(3.964,11.053)--(3.988,11.052)--(4.013,11.719)--(4.038,11.716)--(4.063,11.714)--(4.063,11.713)%
-  --(4.113,11.713)--(4.137,11.713)--(4.187,11.712)--(4.237,11.710)--(4.286,11.709)--(4.336,11.707)%
-  --(4.361,11.706)--(4.386,11.704)--(4.435,11.704)--(4.510,11.700)--(4.560,11.699)--(4.733,11.698)%
-  --(4.758,11.697)--(4.957,11.696)--(5.031,11.695)--(5.056,11.694)--(5.106,11.694)--(5.230,11.693)%
-  --(5.255,11.690)--(5.354,11.688)--(5.429,11.686)--(5.453,11.684)--(5.627,12.706)--(5.652,12.705)%
-  --(5.702,12.705)--(5.727,12.702)--(5.851,12.701)--(5.876,12.700)--(6.099,12.699)--(6.198,12.698)%
-  --(6.248,12.694)--(6.372,12.694)--(6.422,12.694)--(6.447,12.693)--(6.447,12.691)--(6.571,12.691)%
-  --(6.844,12.689)--(6.968,12.686)--(6.993,13.219)--(7.067,13.217)--(7.117,13.216)--(7.167,13.215)%
-  --(7.192,13.214)--(7.316,13.212)--(7.415,13.211)--(7.688,13.209)--(7.961,13.208)--(7.986,13.205)%
-  --(8.110,13.204)--(8.135,13.203)--(8.359,13.202)--(8.706,15.226)--(9.277,15.225)--(9.302,15.225)%
-  --(9.352,15.224)--(9.451,15.222)--(9.600,15.222)--(9.625,15.220)--(9.849,15.220)--(9.873,15.218)%
-  --(10.072,17.103)--(10.445,17.103)--(10.693,17.101)--(10.743,17.100)--(10.892,17.095)--(10.916,17.095)%
-  --(11.090,17.095)--(11.115,17.094);
+\draw[gp path] (11.315,16.534)--(12.231,16.534);
+\draw[gp path] (1.400,16.823)--(1.400,16.076)--(1.880,15.566)--(1.880,15.429)--(2.040,15.181)%
+  --(2.680,15.031)--(3.640,14.083)--(3.800,13.532)--(4.600,13.418)--(4.760,12.894)--(6.040,12.040)%
+  --(7.319,11.507)--(7.639,11.276)--(7.799,11.211)--(8.279,10.502)--(9.559,10.456)--(10.679,10.450)%
+  --(10.839,9.990)--(11.319,9.926)--(11.319,9.312);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (9.647,16.048) {Strategic Urgency};
+\node[gp node right] at (11.131,15.764) {Strategic Urgency};
 \gpcolor{rgb color={0.184,0.243,0.918}}
-\draw[gp path] (9.831,16.048)--(10.747,16.048);
-\draw[gp path] (2.424,11.176)--(2.449,11.183)--(2.449,11.190)--(2.449,11.195)--(2.449,11.198)%
-  --(2.449,11.206)--(2.449,11.225)--(2.449,11.226)--(2.474,11.237)--(2.474,11.246)--(2.474,11.254)%
-  --(2.474,11.265)--(2.498,11.268)--(2.498,11.271)--(2.523,11.272)--(2.523,11.275)--(2.523,11.291)%
-  --(2.523,11.289)--(2.548,11.309)--(2.548,11.307)--(2.573,11.307)--(2.573,11.308)--(2.573,11.317)%
-  --(2.598,11.320)--(2.598,11.328)--(2.623,11.329)--(2.623,11.331)--(2.623,11.342)--(2.647,11.349)%
-  --(2.647,11.351)--(2.672,11.351)--(2.672,11.353)--(2.672,11.357)--(2.697,11.353)--(2.697,11.352)%
-  --(2.747,11.352)--(2.772,11.353)--(2.772,11.355)--(2.772,11.353)--(2.796,11.354)--(2.796,11.353)%
-  --(2.796,11.357)--(2.796,11.356)--(2.821,11.358)--(2.821,11.360)--(2.846,11.362)--(2.871,11.373)%
-  --(2.871,11.366)--(2.896,11.370)--(2.921,11.373)--(2.921,11.374)--(2.921,11.369)--(2.945,11.365)%
-  --(2.970,11.365)--(2.970,11.363)--(2.995,11.373)--(3.070,11.372)--(3.070,11.370)--(3.094,11.371)%
-  --(3.094,11.370)--(3.119,11.373)--(3.119,11.374)--(3.144,11.371)--(3.169,11.369)--(3.169,11.374)%
-  --(3.194,11.373)--(3.194,11.372)--(3.194,11.369)--(3.343,11.368)--(3.343,11.369)--(3.368,11.371)%
-  --(3.417,11.368)--(3.467,11.374)--(3.492,11.375)--(3.517,11.369)--(3.517,11.365)--(3.517,11.366)%
-  --(3.541,11.367)--(3.541,11.368)--(3.566,11.369)--(3.591,11.366)--(3.591,11.362)--(3.641,11.358)%
-  --(3.666,11.357)--(3.666,11.355)--(3.666,11.354)--(3.715,11.354)--(3.740,11.356)--(3.790,11.362)%
-  --(3.815,11.362)--(3.864,11.364)--(3.914,11.364)--(3.914,11.365)--(3.914,11.366)--(3.939,11.366)%
-  --(3.964,11.368)--(3.988,11.364)--(4.013,11.963)--(4.038,11.964)--(4.063,11.963)--(4.063,11.962)%
-  --(4.113,11.961)--(4.137,11.960)--(4.187,11.959)--(4.237,11.962)--(4.286,11.961)--(4.336,11.963)%
-  --(4.361,11.964)--(4.386,11.959)--(4.435,11.959)--(4.510,11.956)--(4.560,11.953)--(4.733,11.953)%
-  --(4.758,11.954)--(4.957,11.950)--(5.031,11.951)--(5.056,11.951)--(5.106,11.953)--(5.230,11.954)%
-  --(5.255,11.951)--(5.255,11.949)--(5.354,11.949)--(5.429,11.945)--(5.453,11.943)--(5.627,12.863)%
-  --(5.627,12.862)--(5.652,12.862)--(5.702,12.863)--(5.727,12.861)--(5.851,12.859)--(5.876,12.857)%
-  --(6.099,12.859)--(6.198,12.858)--(6.198,12.857)--(6.248,12.857)--(6.372,12.856)--(6.422,12.860)%
-  --(6.447,12.859)--(6.571,12.859)--(6.844,12.854)--(6.968,12.855)--(6.993,13.335)--(7.067,13.331)%
-  --(7.117,13.330)--(7.167,13.328)--(7.192,13.328)--(7.316,13.327)--(7.415,13.328)--(7.688,13.324)%
-  --(7.961,13.322)--(7.986,13.319)--(8.110,13.318)--(8.135,13.315)--(8.359,13.315)--(8.706,15.140)%
-  --(9.277,15.140)--(9.302,15.145)--(9.352,15.143)--(9.451,15.141)--(9.600,15.143)--(9.625,15.138)%
-  --(9.849,15.138)--(9.873,15.137)--(10.072,16.836)--(10.445,16.837)--(10.693,16.837)--(10.743,16.835)%
-  --(10.892,16.831)--(10.916,16.833)--(11.090,16.834)--(11.115,16.834);
+\draw[gp path] (11.315,15.764)--(12.231,15.764);
+\draw[gp path] (1.400,16.396)--(1.400,15.728)--(1.880,15.216)--(1.880,15.226)--(2.040,15.060)%
+  --(2.680,14.985)--(3.640,14.005)--(3.800,13.446)--(4.600,13.425)--(4.760,12.957)--(6.040,12.081)%
+  --(7.319,11.508)--(7.639,11.290)--(7.799,11.318)--(8.279,10.597)--(9.559,10.666)--(10.679,10.662)%
+  --(10.839,10.287)--(11.319,10.275)--(11.319,9.665);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,17.383)--(2.424,10.691)--(11.115,10.691)--(11.115,17.383)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,14.037) {Objective value};
-\node[gp node center,rotate=-270] at (14.397,14.037) {Strategic Urgency};
-\node[gp node center] at (6.769,9.061) {Relative time ($\tau$) [S]};
+\draw[gp path] (1.400,17.099)--(1.400,9.000)--(12.599,9.000)--(12.599,17.099)--cycle;
+\node[gp node center,rotate=-270] at (-2.020,13.049) {Objective value};
+\node[gp node center,rotate=-270] at (16.065,13.049) {Strategic Urgency};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{10.691cm}}{\pgfpoint{11.115cm}{17.383cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{1.400cm}{9.000cm}}{\pgfpoint{12.599cm}{17.099cm}}
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,1.845)--(11.299,1.845);
+\draw[gp path] (1.400,0.000)--(12.599,0.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,1.845)--(2.052,1.845);
-\node[gp node right] at (1.688,1.845) {$102000$};
+\draw[gp path] (1.400,0.000)--(1.580,0.000);
+\node[gp node right] at (1.216,-0.308) {$167200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,2.682)--(11.299,2.682);
+\draw[gp path] (1.400,1.157)--(12.599,1.157);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,2.682)--(2.052,2.682);
-\node[gp node right] at (1.688,2.682) {$103000$};
+\draw[gp path] (1.400,1.157)--(1.580,1.157);
+\node[gp node right] at (1.216,0.849) {$167400$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,3.518)--(11.299,3.518);
+\draw[gp path] (1.400,2.314)--(12.599,2.314);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,3.518)--(2.052,3.518);
-\node[gp node right] at (1.688,3.518) {$104000$};
+\draw[gp path] (1.400,2.314)--(1.580,2.314);
+\node[gp node right] at (1.216,2.006) {$167600$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,4.355)--(11.299,4.355);
+\draw[gp path] (1.400,3.471)--(12.599,3.471);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,4.355)--(2.052,4.355);
-\node[gp node right] at (1.688,4.355) {$105000$};
+\draw[gp path] (1.400,3.471)--(1.580,3.471);
+\node[gp node right] at (1.216,3.163) {$167800$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,5.192)--(11.299,5.192);
+\draw[gp path] (1.400,4.628)--(12.599,4.628);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,5.192)--(2.052,5.192);
-\node[gp node right] at (1.688,5.192) {$106000$};
+\draw[gp path] (1.400,4.628)--(1.580,4.628);
+\node[gp node right] at (1.216,4.320) {$168000$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,6.028)--(11.299,6.028);
+\draw[gp path] (1.400,5.785)--(12.599,5.785);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,6.028)--(2.052,6.028);
-\node[gp node right] at (1.688,6.028) {$107000$};
+\draw[gp path] (1.400,5.785)--(1.580,5.785);
+\node[gp node right] at (1.216,5.477) {$168200$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,6.865)--(4.679,6.865);
-\draw[gp path] (11.115,6.865)--(11.299,6.865);
+\draw[gp path] (1.400,6.942)--(5.979,6.942);
+\draw[gp path] (12.415,6.942)--(12.599,6.942);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,6.865)--(2.052,6.865);
-\node[gp node right] at (1.688,6.865) {$108000$};
+\draw[gp path] (1.400,6.942)--(1.580,6.942);
+\node[gp node right] at (1.216,6.634) {$168400$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,7.701)--(4.679,7.701);
-\draw[gp path] (11.115,7.701)--(11.299,7.701);
+\draw[gp path] (1.400,8.099)--(12.599,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,7.701)--(2.052,7.701);
-\node[gp node right] at (1.688,7.701) {$109000$};
+\draw[gp path] (1.400,8.099)--(1.580,8.099);
+\node[gp node right] at (1.216,7.791) {$168600$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,8.538)--(11.299,8.538);
+\draw[gp path] (1.400,0.000)--(1.400,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,8.538)--(2.052,8.538);
-\node[gp node right] at (1.688,8.538) {$110000$};
+\draw[gp path] (1.400,0.000)--(1.400,0.180);
+\draw[gp path] (1.400,8.099)--(1.400,7.919);
+\node[gp node left,rotate=270] at (1.400,-0.184) {0};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.872,1.845)--(1.872,8.538);
+\draw[gp path] (3.000,0.000)--(3.000,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,1.845)--(1.872,2.025);
-\draw[gp path] (1.872,8.538)--(1.872,8.358);
-\node[gp node left,rotate=270] at (1.872,1.661) {$0$};
+\draw[gp path] (3.000,0.000)--(3.000,0.180);
+\draw[gp path] (3.000,8.099)--(3.000,7.919);
+\node[gp node left,rotate=270] at (3.000,-0.184) {10};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (3.219,1.845)--(3.219,8.538);
+\draw[gp path] (4.600,0.000)--(4.600,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.219,1.845)--(3.219,2.025);
-\draw[gp path] (3.219,8.538)--(3.219,8.358);
-\node[gp node left,rotate=270] at (3.219,1.661) {$50$};
+\draw[gp path] (4.600,0.000)--(4.600,0.180);
+\draw[gp path] (4.600,8.099)--(4.600,7.919);
+\node[gp node left,rotate=270] at (4.600,-0.184) {20};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.565,1.845)--(4.565,8.538);
+\draw[gp path] (6.200,0.000)--(6.200,6.379);
+\draw[gp path] (6.200,7.919)--(6.200,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.565,1.845)--(4.565,2.025);
-\draw[gp path] (4.565,8.538)--(4.565,8.358);
-\node[gp node left,rotate=270] at (4.565,1.661) {$100$};
+\draw[gp path] (6.200,0.000)--(6.200,0.180);
+\draw[gp path] (6.200,8.099)--(6.200,7.919);
+\node[gp node left,rotate=270] at (6.200,-0.184) {30};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.912,1.845)--(5.912,6.818);
-\draw[gp path] (5.912,8.358)--(5.912,8.538);
+\draw[gp path] (7.799,0.000)--(7.799,6.379);
+\draw[gp path] (7.799,7.919)--(7.799,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.912,1.845)--(5.912,2.025);
-\draw[gp path] (5.912,8.538)--(5.912,8.358);
-\node[gp node left,rotate=270] at (5.912,1.661) {$150$};
+\draw[gp path] (7.799,0.000)--(7.799,0.180);
+\draw[gp path] (7.799,8.099)--(7.799,7.919);
+\node[gp node left,rotate=270] at (7.799,-0.184) {40};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.259,1.845)--(7.259,6.818);
-\draw[gp path] (7.259,8.358)--(7.259,8.538);
+\draw[gp path] (9.399,0.000)--(9.399,6.379);
+\draw[gp path] (9.399,7.919)--(9.399,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.259,1.845)--(7.259,2.025);
-\draw[gp path] (7.259,8.538)--(7.259,8.358);
-\node[gp node left,rotate=270] at (7.259,1.661) {$200$};
+\draw[gp path] (9.399,0.000)--(9.399,0.180);
+\draw[gp path] (9.399,8.099)--(9.399,7.919);
+\node[gp node left,rotate=270] at (9.399,-0.184) {50};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.606,1.845)--(8.606,6.818);
-\draw[gp path] (8.606,8.358)--(8.606,8.538);
+\draw[gp path] (10.999,0.000)--(10.999,6.379);
+\draw[gp path] (10.999,7.919)--(10.999,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.606,1.845)--(8.606,2.025);
-\draw[gp path] (8.606,8.538)--(8.606,8.358);
-\node[gp node left,rotate=270] at (8.606,1.661) {$250$};
+\draw[gp path] (10.999,0.000)--(10.999,0.180);
+\draw[gp path] (10.999,8.099)--(10.999,7.919);
+\node[gp node left,rotate=270] at (10.999,-0.184) {60};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.952,1.845)--(9.952,6.818);
-\draw[gp path] (9.952,8.358)--(9.952,8.538);
+\draw[gp path] (12.599,0.000)--(12.599,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.952,1.845)--(9.952,2.025);
-\draw[gp path] (9.952,8.538)--(9.952,8.358);
-\node[gp node left,rotate=270] at (9.952,1.661) {$300$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (11.299,1.845)--(11.299,8.538);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (11.299,1.845)--(11.299,2.025);
-\draw[gp path] (11.299,8.538)--(11.299,8.358);
-\node[gp node left,rotate=270] at (11.299,1.661) {$350$};
-\draw[gp path] (11.299,1.845)--(11.119,1.845);
-\node[gp node left] at (11.483,1.845) {$3.7\times10^{6}$};
-\draw[gp path] (11.299,2.589)--(11.119,2.589);
-\node[gp node left] at (11.483,2.589) {$3.75\times10^{6}$};
-\draw[gp path] (11.299,3.332)--(11.119,3.332);
-\node[gp node left] at (11.483,3.332) {$3.8\times10^{6}$};
-\draw[gp path] (11.299,4.076)--(11.119,4.076);
-\node[gp node left] at (11.483,4.076) {$3.85\times10^{6}$};
-\draw[gp path] (11.299,4.820)--(11.119,4.820);
-\node[gp node left] at (11.483,4.820) {$3.9\times10^{6}$};
-\draw[gp path] (11.299,5.563)--(11.119,5.563);
-\node[gp node left] at (11.483,5.563) {$3.95\times10^{6}$};
-\draw[gp path] (11.299,6.307)--(11.119,6.307);
-\node[gp node left] at (11.483,6.307) {$4\times10^{6}$};
-\draw[gp path] (11.299,7.051)--(11.119,7.051);
-\node[gp node left] at (11.483,7.051) {$4.05\times10^{6}$};
-\draw[gp path] (11.299,7.794)--(11.119,7.794);
-\node[gp node left] at (11.483,7.794) {$4.1\times10^{6}$};
-\draw[gp path] (11.299,8.538)--(11.119,8.538);
-\node[gp node left] at (11.483,8.538) {$4.15\times10^{6}$};
-\draw[gp path] (1.872,8.538)--(1.872,1.845)--(11.299,1.845)--(11.299,8.538)--cycle;
-\draw[gp path] (4.679,6.818)--(4.679,8.358)--(11.115,8.358)--(11.115,6.818)--cycle;
-\node[gp node right] at (9.831,7.973) {Strategic Resource Penalty};
+\draw[gp path] (12.599,0.000)--(12.599,0.180);
+\draw[gp path] (12.599,8.099)--(12.599,7.919);
+\node[gp node left,rotate=270] at (12.599,-0.184) {70};
+\draw[gp path] (12.599,0.000)--(12.419,0.000);
+\node[gp node left] at (12.783,-0.308) {$5.1\times10^{6}$};
+\draw[gp path] (12.599,0.810)--(12.419,0.810);
+\node[gp node left] at (12.783,0.502) {$5.2\times10^{6}$};
+\draw[gp path] (12.599,1.620)--(12.419,1.620);
+\node[gp node left] at (12.783,1.312) {$5.3\times10^{6}$};
+\draw[gp path] (12.599,2.430)--(12.419,2.430);
+\node[gp node left] at (12.783,2.122) {$5.4\times10^{6}$};
+\draw[gp path] (12.599,3.240)--(12.419,3.240);
+\node[gp node left] at (12.783,2.932) {$5.5\times10^{6}$};
+\draw[gp path] (12.599,4.050)--(12.419,4.050);
+\node[gp node left] at (12.783,3.742) {$5.6\times10^{6}$};
+\draw[gp path] (12.599,4.859)--(12.419,4.859);
+\node[gp node left] at (12.783,4.551) {$5.7\times10^{6}$};
+\draw[gp path] (12.599,5.669)--(12.419,5.669);
+\node[gp node left] at (12.783,5.361) {$5.8\times10^{6}$};
+\draw[gp path] (12.599,6.479)--(12.419,6.479);
+\node[gp node left] at (12.783,6.171) {$5.9\times10^{6}$};
+\draw[gp path] (12.599,7.289)--(12.419,7.289);
+\node[gp node left] at (12.783,6.981) {$6\times10^{6}$};
+\draw[gp path] (12.599,8.099)--(12.419,8.099);
+\node[gp node left] at (12.783,7.791) {$6.1\times10^{6}$};
+\draw[gp path] (1.400,8.099)--(1.400,0.000)--(12.599,0.000)--(12.599,8.099)--cycle;
+\draw[gp path] (5.979,6.379)--(5.979,7.919)--(12.415,7.919)--(12.415,6.379)--cycle;
+\node[gp node right] at (11.131,7.534) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.000,0.533,0.208}}
 \gpsetlinewidth{2.50}
-\draw[gp path] (10.015,7.973)--(10.931,7.973);
-\draw[gp path] (1.872,7.813)--(1.899,7.643)--(1.899,7.506)--(1.899,7.324)--(1.899,7.206)%
-  --(1.899,7.050)--(1.899,6.760)--(1.899,6.531)--(1.926,6.375)--(1.926,6.281)--(1.926,6.243)%
-  --(1.926,6.113)--(1.953,6.046)--(1.953,5.936)--(1.953,5.785)--(1.980,5.740)--(1.980,5.637)%
-  --(1.980,5.570)--(1.980,5.448)--(2.007,5.374)--(2.007,5.232)--(2.034,5.205)--(2.034,5.123)%
-  --(2.034,4.856)--(2.061,4.820)--(2.061,4.600)--(2.087,4.557)--(2.087,4.483)--(2.087,4.413)%
-  --(2.114,4.383)--(2.114,4.361)--(2.141,4.331)--(2.141,4.252)--(2.141,4.208)--(2.168,4.186)%
-  --(2.168,4.162)--(2.222,4.118)--(2.249,4.103)--(2.249,4.063)--(2.249,3.998)--(2.276,3.978)%
-  --(2.276,3.945)--(2.276,3.913)--(2.276,3.897)--(2.303,3.751)--(2.303,3.737)--(2.330,3.701)%
-  --(2.357,3.666)--(2.357,3.635)--(2.384,3.572)--(2.411,3.572)--(2.411,3.561)--(2.411,3.526)%
-  --(2.438,3.526)--(2.465,3.482)--(2.465,3.467)--(2.491,3.458)--(2.572,3.438)--(2.572,3.424)%
-  --(2.599,3.396)--(2.626,3.326)--(2.626,3.309)--(2.653,3.267)--(2.680,3.264)--(2.680,3.251)%
-  --(2.707,3.251)--(2.707,3.220)--(2.869,3.212)--(2.896,3.210)--(2.949,3.210)--(3.003,3.176)%
-  --(3.030,3.176)--(3.057,3.176)--(3.057,3.153)--(3.057,3.123)--(3.084,3.103)--(3.111,3.078)%
-  --(3.138,3.063)--(3.138,3.056)--(3.192,3.056)--(3.219,3.056)--(3.219,3.036)--(3.219,3.033)%
-  --(3.273,3.008)--(3.300,3.008)--(3.353,2.999)--(3.380,2.989)--(3.434,2.988)--(3.488,2.988)%
-  --(3.515,2.988)--(3.542,2.977)--(3.569,2.964)--(3.596,2.964)--(3.623,2.944)--(3.650,2.944)%
-  --(3.650,2.931)--(3.704,2.874)--(3.730,2.870)--(3.784,2.856)--(3.838,2.856)--(3.892,2.856)%
-  --(3.946,2.856)--(3.973,2.856)--(4.000,2.856)--(4.054,2.856)--(4.134,2.856)--(4.188,2.856)%
-  --(4.377,2.856)--(4.404,2.799)--(4.619,2.799)--(4.700,2.799)--(4.727,2.796)--(4.781,2.751)%
-  --(4.916,2.751)--(4.943,2.751)--(5.050,2.741)--(5.131,2.741)--(5.158,2.741)--(5.347,2.741)%
-  --(5.373,2.741)--(5.427,2.734)--(5.454,2.734)--(5.589,2.730)--(5.616,2.730)--(5.858,2.730)%
-  --(5.966,2.730)--(6.020,2.730)--(6.155,2.730)--(6.208,2.704)--(6.235,2.704)--(6.370,2.684)%
-  --(6.666,2.661)--(6.801,2.661)--(6.828,2.661)--(6.909,2.661)--(6.963,2.661)--(7.016,2.661)%
-  --(7.043,2.661)--(7.178,2.661)--(7.286,2.651)--(7.582,2.639)--(7.878,2.639)--(7.905,2.630)%
-  --(8.040,2.630)--(8.067,2.607)--(8.309,2.607)--(8.686,2.607)--(9.306,2.607)--(9.333,2.607)%
-  --(9.387,2.607)--(9.494,2.607)--(9.656,2.607)--(9.683,2.607)--(9.925,2.607)--(9.952,2.607)%
-  --(10.168,2.607)--(10.572,2.607)--(10.841,2.607)--(10.895,2.607)--(11.057,2.607)--(11.084,2.607)%
-  --(11.272,2.607)--(11.299,2.607);
+\draw[gp path] (11.315,7.534)--(12.231,7.534);
+\draw[gp path] (1.400,7.266)--(1.400,6.578)--(1.880,6.416)--(1.880,5.808)--(2.040,5.548)%
+  --(2.680,5.212)--(3.640,4.501)--(3.800,4.269)--(4.600,3.760)--(4.760,3.517)--(6.040,2.893)%
+  --(7.319,2.389)--(7.639,2.250)--(7.799,1.851)--(8.279,2.013)--(9.559,1.730)--(10.679,1.695)%
+  --(10.839,1.261)--(11.319,0.862)--(11.319,0.434);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (9.831,7.203) {Strategic Clustering Value};
+\node[gp node right] at (11.131,6.764) {Strategic Clustering Value};
 \gpcolor{rgb color={0.475,0.137,0.557}}
-\draw[gp path] (10.015,7.203)--(10.931,7.203);
-\draw[gp path] (1.872,8.421)--(1.899,8.077)--(1.899,7.853)--(1.899,7.707)--(1.899,7.559)%
-  --(1.899,7.382)--(1.899,6.981)--(1.899,6.896)--(1.926,6.768)--(1.926,6.457)--(1.926,6.329)%
-  --(1.926,6.148)--(1.953,6.064)--(1.953,6.029)--(1.953,5.936)--(1.980,5.835)--(1.980,5.787)%
-  --(1.980,5.609)--(1.980,5.615)--(2.007,5.330)--(2.007,5.255)--(2.034,5.245)--(2.034,5.165)%
-  --(2.034,4.978)--(2.061,4.751)--(2.061,4.512)--(2.087,4.476)--(2.087,4.374)--(2.087,4.239)%
-  --(2.114,4.053)--(2.114,3.996)--(2.141,3.971)--(2.141,3.946)--(2.141,3.887)--(2.168,3.825)%
-  --(2.168,3.775)--(2.222,3.728)--(2.249,3.697)--(2.249,3.627)--(2.249,3.622)--(2.276,3.590)%
-  --(2.276,3.588)--(2.276,3.519)--(2.276,3.503)--(2.303,3.394)--(2.303,3.363)--(2.330,3.286)%
-  --(2.357,3.152)--(2.357,3.157)--(2.384,3.098)--(2.411,2.984)--(2.411,2.952)--(2.411,2.930)%
-  --(2.438,2.944)--(2.465,2.911)--(2.465,2.907)--(2.491,2.763)--(2.572,2.764)--(2.572,2.781)%
-  --(2.599,2.755)--(2.599,2.743)--(2.626,2.699)--(2.626,2.684)--(2.653,2.709)--(2.680,2.722)%
-  --(2.680,2.660)--(2.707,2.643)--(2.707,2.651)--(2.707,2.635)--(2.869,2.637)--(2.869,2.609)%
-  --(2.896,2.581)--(2.949,2.599)--(3.003,2.528)--(3.030,2.509)--(3.057,2.519)--(3.057,2.528)%
-  --(3.057,2.467)--(3.084,2.444)--(3.084,2.425)--(3.111,2.401)--(3.138,2.416)--(3.138,2.423)%
-  --(3.192,2.456)--(3.219,2.460)--(3.219,2.486)--(3.219,2.476)--(3.273,2.468)--(3.300,2.452)%
-  --(3.353,2.374)--(3.380,2.374)--(3.434,2.337)--(3.488,2.334)--(3.488,2.305)--(3.488,2.291)%
-  --(3.515,2.295)--(3.542,2.257)--(3.569,2.281)--(3.596,2.299)--(3.623,2.261)--(3.650,2.247)%
-  --(3.650,2.249)--(3.704,2.260)--(3.730,2.273)--(3.784,2.274)--(3.838,2.218)--(3.892,2.226)%
-  --(3.946,2.186)--(3.973,2.158)--(4.000,2.198)--(4.054,2.191)--(4.134,2.191)--(4.188,2.206)%
-  --(4.377,2.194)--(4.404,2.172)--(4.619,2.212)--(4.700,2.187)--(4.727,2.188)--(4.781,2.164)%
-  --(4.916,2.145)--(4.943,2.139)--(4.943,2.158)--(5.050,2.145)--(5.131,2.170)--(5.158,2.168)%
-  --(5.347,2.168)--(5.347,2.177)--(5.373,2.162)--(5.427,2.153)--(5.454,2.151)--(5.589,2.158)%
-  --(5.616,2.180)--(5.858,2.142)--(5.966,2.155)--(5.966,2.164)--(6.020,2.123)--(6.155,2.130)%
-  --(6.208,2.081)--(6.235,2.077)--(6.235,2.067)--(6.370,2.058)--(6.666,2.092)--(6.801,2.064)%
-  --(6.828,2.056)--(6.909,2.082)--(6.963,2.075)--(7.016,2.088)--(7.043,2.083)--(7.178,2.064)%
-  --(7.286,2.060)--(7.582,2.075)--(7.878,2.094)--(7.905,2.092)--(8.040,2.102)--(8.067,2.124)%
-  --(8.309,2.103)--(8.686,2.065)--(9.306,2.057)--(9.333,1.999)--(9.387,2.019)--(9.494,2.027)%
-  --(9.656,1.998)--(9.683,2.024)--(9.925,2.024)--(9.952,2.024)--(10.168,1.999)--(10.572,1.983)%
-  --(10.841,1.963)--(10.895,1.980)--(11.057,1.980)--(11.084,1.949)--(11.272,1.933)--(11.299,1.923);
+\draw[gp path] (11.315,6.764)--(12.231,6.764);
+\draw[gp path] (1.400,7.362)--(1.400,6.684)--(1.880,6.436)--(1.880,5.789)--(2.040,5.346)%
+  --(2.680,4.975)--(3.640,4.638)--(3.800,4.397)--(4.600,3.978)--(4.760,3.494)--(6.040,3.164)%
+  --(7.319,3.062)--(7.639,2.898)--(7.799,2.498)--(8.279,2.188)--(9.559,1.711)--(10.679,1.700)%
+  --(10.839,1.136)--(11.319,0.899)--(11.319,0.584);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.872,8.538)--(1.872,1.845)--(11.299,1.845)--(11.299,8.538)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,5.191) {Strategic Resource Penalty [Hours]};
-\node[gp node center,rotate=-270] at (14.397,5.191) {Strategic Clustering Value};
-\node[gp node center] at (6.585,0.215) {Relative time ($\tau$) [S]};
+\draw[gp path] (1.400,8.099)--(1.400,0.000)--(12.599,0.000)--(12.599,8.099)--cycle;
+\node[gp node center,rotate=-270] at (-1.100,4.049) {Strategic Resource Penalty [Hours]};
+\node[gp node center,rotate=-270] at (15.329,4.049) {Strategic Clustering Value};
+\node[gp node center] at (6.999,-1.445) {Relative time ($\tau$) [S]};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 2}{\pgfpoint{1.872cm}{1.845cm}}{\pgfpoint{11.299cm}{8.538cm}}
+\gpdefrectangularnode{gp plot 2}{\pgfpoint{1.400cm}{0.000cm}}{\pgfpoint{12.599cm}{8.099cm}}
 \endtikzpicture
 %% gnuplot variables
